# Polyrendere

./: CMakeLists.txt  README.md
headers/: Cube.hpp  Render_math.hpp  Renderable.hpp  Renderer.hpp  Sphere.hpp
sources/: Cube.cpp  Renderer.cpp  Sphere.cpp  main.cpp
